# Cybersecurity-Portfolio

ai-security/llm-semantic-mirage/: README.md
ai-security/llm-semantic-mirage/defense/: detection-rules.md  mitigations.md
ai-security/llm-semantic-mirage/evidence/: README.md
ai-security/llm-semantic-mirage/research/: 01-cfs-framework.md  02-attack-patterns.md  03-model-comparison.md
programming/python/magic-sniferr/: .gitignore  README.md  SECURITY.md  main.py  pyproject.toml  setup.py  setup.sh
programming/python/magic-sniferr/.githooks/: pre-commit
programming/python/magic-sniferr/magic_sniffer/: __init__.py  cli.py  database.py  scanner.py
programming/python/magic-sniferr/tests/: __init__.py  conftest.py  test_scanner.py
